--- a/store/blocks/drawer.jsonc
+++ b/store/blocks/drawer.jsonc
@@ -22,7 +22,7 @@
       "highlight": true,
       "itemProps": {
         "categoryId": 1, 
-        "text": "Major Appliances"
+        "text": "Major Appliances teste"
       }
     },
     "blocks": [
