--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -23,19 +23,21 @@
       "callToActionMode": "button",
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
-      "textAlignment": "center"
+      "textAlignment": "center",
+      "blockClass": "vintage"     //  <------------
     }
   },"info-card#button-left": {
     "props": {
       "isFullModeStyle": false,
       "textPosition": "left",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
       "headline": "Shining chrome",
       "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
       "callToActionMode": "link",
-      "callToActionText": "Go to Collection",
+      "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
-      "textAlignment": "center"
+      "textAlignment": "center",
+      "blockClass":"metal"
     }
   }
 }
