--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,40 +1,19 @@
 {
   "store.home": {
     "blocks": [
-      "layout-flex-row",
-      "layout-flex-col",
+      "flex-layout.row",
+      "rich-text",
       "info-card#button-right",
       "info-card#button-left"
     ]
   },
-  "flex-layout.row": {
-    "children": [
-      "info-card",
-      "rich-text"
-    ]
-  },
-  "info-card#rethink": {
-    "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
-      "isFullModeStyle": true,
-      "headline": "Time to rethink your kitchen",
-      "callToActionText": "Discover",
-      "textPosition": "center"
-    }
-  },
-  "rich-text#deletar": {
-    "props": {
-      "text": "I'll be deleted soon"
-    }
-  },
-  "layout-flex-col": {
+  "rich-text": {
     "props": {
       "text": "*Estacao Store*",
       "textPosition": "CENTER",
       "color": "action-primary"
     }
   },
-
   "info-card#button-right": {
     "props": {
       "isFullModeStyle": false,
@@ -46,10 +25,9 @@
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center",
-      "blockClass": "vintage" //  <------------
+      "blockClass": "vintage"     //  <------------
     }
-  },
-  "info-card#button-left": {
+  },"info-card#button-left": {
     "props": {
       "isFullModeStyle": false,
       "textPosition": "left",
@@ -60,7 +38,42 @@
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center",
-      "blockClass": "metal"
+      "blockClass":"metal"
+    }
+  },
+  "flex-layout.row":{
+    "children": [
+      "info-card",
+      "flex-layout.col"
+    ]
+  },
+  
+ "info-card#rethink": {
+    "props": {
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
+      "isFullModeStyle": true,
+      "headline": "Time to rethink your kitchen",
+      "callToActionText": "Discover",
+      "textPosition": "center"
+    }
+  },
+  
+  "flex-layout.col": {
+    "children": [
+      "image#electronics",
+      "image#major-appliance"
+    ]
+  },
+  "image#electronics": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
+      "maxWidth": "100%"
+    }
+  },
+  "image#major-appliance": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
+      "maxWidth": "100%"
     }
   }
 }
