--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,44 +2,8 @@
   "store.home": {
     "blocks": [
       "flex-layout.row",
-      "rich-text",
-      "info-card#button-right",
-      "info-card#button-left"
+      "shelf"
     ]
-  },
-  "rich-text": {
-    "props": {
-      "text": "*Estacao Store*",
-      "textPosition": "CENTER",
-      "color": "action-primary"
-    }
-  },
-  "info-card#button-right": {
-    "props": {
-      "isFullModeStyle": false,
-      "textPosition": "right",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-      "headline": "Vintage Pink",
-      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-      "callToActionMode": "button",
-      "callToActionText": "Explore",
-      "callToActionUrl": "/sale/d",
-      "textAlignment": "center",
-      "blockClass": "vintage"     //  <------------
-    }
-  },"info-card#button-left": {
-    "props": {
-      "isFullModeStyle": false,
-      "textPosition": "left",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-      "headline": "Shining chrome",
-      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-      "callToActionMode": "link",
-      "callToActionText": "Explore",
-      "callToActionUrl": "/sale/d",
-      "textAlignment": "center",
-      "blockClass":"metal"
-    }
   },
   "flex-layout.row":{
     "children": [
@@ -75,5 +39,8 @@
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
       "maxWidth": "100%"
     }
+  },
+  "shelf":{
+    
   }
 }
