--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,9 +2,12 @@
   "store.home": {
     "blocks": [
       "flex-layout.row",
+      "slider-layout#home",
       "shelf"
+      
     ]
   },
+  
   "flex-layout.row":{
     "children": [
       "info-card",
@@ -39,8 +42,5 @@
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
       "maxWidth": "100%"
     }
-  },
-  "shelf":{
-    
   }
 }
