--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -11,7 +11,7 @@
         "props": {
           "autoplay": {
             "timeout": 7,
-            "stopOnHover": false
+            "stopOnHover": true
           }
         }
       },
