--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -62,8 +62,8 @@
   "rich-text#desktop": {
     "props": {
       "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
-      "textPosition": "LEFT ",
-      "textAlignment": "LEFT"
+      "textPosition": "RIGHT ",
+      "textAlignment": "RIGHT"
     }
   },
   "image#desktop": {
@@ -79,8 +79,8 @@
   "rich-text#mobile": {
     "props": {
       "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
-      "textPosition": "LEFT",
-      "textAlignment": "LEFT"
+      "textPosition": "RIGHT",
+      "textAlignment": "RIGHT"
     }
   },
   "image#mobile": {
