--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,7 @@
 {
   "store.product": {
      "children": [
+       "breadcrumb",
        "flex-layout.row#main"
      ]
    },
@@ -21,8 +22,12 @@
   "flex-layout.col#right": {
     "children": [
       "product-name",
+      "product-identifier.product",
+      "sku-selector",
+      "product-quantity",
       "product-price",
-      "buy-button"
+      "buy-button",
+      "shipping-simulator"
     ],
     "props":{
       "verticalAlign": "middle",
