--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -2,7 +2,8 @@
   "store.product": {
      "children": [
        "breadcrumb",
-       "flex-layout.row#main"
+       "flex-layout.row#main",
+       "shelf.relatedProducts"
      ]
    },
    "flex-layout.row#main": { 
@@ -16,8 +17,20 @@
   },
   "flex-layout.col#left": {
     "children": [
-      "product-images"
+      "stack-layout#brand"
     ]
+  },
+  "stack-layout#brand": {
+    "children": [
+      "product-images",
+      "product-brand"
+    ],
+    "props": {
+      "logoWithLink":30,
+      "displayMode": "logo",
+      "InitialSelectionEnum": "empty",
+      "showValueNameForImageVariation": true
+    }
   },
   "flex-layout.col#right": {
     "children": [
@@ -39,6 +52,11 @@
     "children": [
       "sku-selector",
       "product-quantity"
-    ]
+    ],
+    "props" :{
+      "InitialSelectionEnum": "empty",
+      "displayMode": "default",
+      "showValueNameForImageVariation": true
+    }
   }
  }
