--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -24,9 +24,11 @@
     "children": [
       "product-images",
       "product-brand"
-    ],
+    ]
+  },
+  "product-brand":{
     "props": {
-      "logoWithLink":30,
+      "height":30,
       "displayMode": "logo"
     }
   },
