--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -57,8 +57,8 @@
   "sku-selector": {
     "props" :{
       "InitialSelectionEnum": "empty",
-      "displayMode": "default",
-      "showValueNameForImageVariation": true
+      "showValueNameForImageVariation": false,
+      "DisplayMode": "selecionar"
     }
   }
  }
