--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -57,7 +57,7 @@
   "sku-selector": {
     "props" :{
       "initialSelection": "empty",
-      "showValueNameForImageVariation": false,
+      "showValueNameForImageVariation": true,
       "DisplayMode": "selecionar",
       "showVariationsErrorMessage": "true"
     }
