--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -22,15 +22,61 @@
             "defaultActiveTab": true
         }
     },
-    "tab-list.item#home2":{
+    "tab-list.item#home2": {
         "props": {
             "tabId": "electronics"
         }
     },
-    "tab-content#home":{
+    "tab-content#home": {
         "children": [
             "tab-content.item#home1",
             "tab-content.item#home2"
         ]
+    },
+    "tab-content.item#home1": {
+        "children": [
+            "text#home1",
+            "text#home2"
+        ],
+        "props": {
+            "tabId": "home1"
+        }
+    },
+    "tab-content.item#home2": {
+        "children": [
+            "text#home1",
+            "text#home2"
+        ],
+        "props": {
+            "tabId": "home2"
+        }
+    },
+    "rich-text#home1": {
+        "props": {
+            "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
+            "textPosition": "CENTER",
+            "font": "t-heading-3"
+        }
+    },
+    "rich-text#home2": {
+        "props": {
+            "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
+            "textPosition": "CENTER",
+            "font": "t-heading-3"
+        }
+    },
+    "rich-text#home1": {
+        "props": {
+            "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
+            "textPosition": "CENTER",
+            "font": "t-heading-3"
+        }
+    },
+    "rich-text#home2": {
+        "props": {
+            "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
+            "textPosition": "CENTER",
+            "font": "t-heading-3"
+        }
     }
 }
