--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -18,12 +18,14 @@
     },
     "tab-list.item#home1": {
         "props": {
+            "text": "Major Appliances",
             "tabId": "majorAppliances",
             "defaultActiveTab": true
         }
     },
     "tab-list.item#home2": {
         "props": {
+            "text": "Electronics",
             "tabId": "electronics"
         }
     },
@@ -35,17 +37,18 @@
     },
     "tab-content.item#home1": {
         "children": [
-            "text#home1",
-            "text#home2"
+            "rich-text#home1",
+            "rich-text#home2"
         ],
         "props": {
-            "tabId": "home1"
+            "tabId": "home1",
+            "defaultActiveTab" : true
         }
     },
     "tab-content.item#home2": {
         "children": [
-            "text#home1",
-            "text#home2"
+            "rich-text#home1",
+            "rich-text#home2"
         ],
         "props": {
             "tabId": "home2"
