--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -25,8 +25,8 @@
     },
     "tab-list.item#home2": {
         "props": {
-            "tabId": "electronics",
-            "label": "Electronics"
+            "tabId": "instagram",
+            "label": "Instagram"
         }
     },
     "tab-content#home": {
@@ -41,15 +41,15 @@
         ],
         "props": {
             "tabId": "majorAppliances",
-            "defaultActiveTab" : true
+            "defaultActiveTab": true
         }
     },
     "tab-content.item#home2": {
         "children": [
-            "rich-text#home2"
+            "iframe"
         ],
         "props": {
-            "tabId": "electronics"
+            "tabId": "instagram"
         }
     },
     "rich-text#home1": {
@@ -59,12 +59,12 @@
             "font": "t-heading-3"
         }
     },
-    "rich-text#home2": {
+    "iframe": {
         "props": {
-            "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-            "textPosition": "CENTER",
-            "font": "t-heading-3",
-            "tabId": "home2"
+            "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+            "width": 800,
+            "height": 1000,
+            "tabId": "instagram"
         }
     }
 }
