--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -15,7 +15,7 @@
     "search-result-layout.customQuery": {
         "props": {
             "orderByField": "OrderByTopSaleDESC",
-            "hideUnavailableItems": true,
+            "hideUnavailableItems": false,
             "maxItemsPerPage": 8,
             "queryField": "Blue Top Retro Camera",
             "mapField": "ft"
