--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -14,7 +14,7 @@
     "header-layout.desktop": {
         "children": [
             "header-row#notification",
-            "header-row#main",
+            "header-row#main"
         ]
     },
     "header-layout.mobile": {
