--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -14,7 +14,8 @@
     "header-layout.desktop": {
         "children": [
             "header-row#notification",
-            "header-row#main"
+            "header-row#main",
+            "header-row#menu"
         ]
     },
     "header-layout.mobile": {
@@ -86,5 +87,17 @@
         "props": {
             "showIconProfile": false
         }
+    },
+    "header-row#menu": {
+        "children": [
+            "header-spacer",
+            "vtex.menu@2.x:menu#categories",
+            "header-spacer"
+        ]
+    },
+    "header-row#menu-mobile": {
+        "children": [
+            "drawer"
+        ]
     }
 }
