--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -1,21 +1,21 @@
 {
     "vtex.menu@2.x:menu#categories": {
-        "children": [
-            "menu-item#major-appliances",
-            "menu-item#small-appliances",
-            "menu-item#electronics"
-        ],
-        "props": {
-            "orientation": "horizontal"
-        }
+      "children": [
+        "menu-item#major-appliances",
+        "menu-item#small-appliances",
+        "menu-item#electronics"
+      ],  
+      "props":{
+        "orientation": "horizontal"
+      }
     },
-    "vtex.menu@2.x:submenu#major": {
+    "vtex.menu@2.x:submenu#major":{
         "children": [
-            "vtex.menu@2.x:menu#major"
+            "vtex.menu@2.x:menu#major-appliances"
         ]
     },
-    "vtex.menu@2.x:menu#major": {
-        "children": [
+    "vtex.menu@2.x:menu#major-appliances":{
+        "children":[
             "menu-item#refrigerators",
             "menu-item#ovens",
             "menu-item#washers"
@@ -24,13 +24,13 @@
             "orientation": "vertical"
         }
     },
-    "vtex.menu@2.x:submenu#small": {
+    "vtex.menu@2.x:submenu#small":{
         "children": [
-            "vtex.menu@2.x:menu#small"
+            "vtex.menu@2.x:menu#small-appliances"
         ]
     },
-    "vtex.menu@2.x:menu#small": {
-        "children": [
+    "vtex.menu@2.x:menu#small-appliances":{
+        "children":[
             "menu-item#mixers",
             "menu-item#toasters",
             "menu-item#coffee"
@@ -39,13 +39,13 @@
             "orientation": "vertical"
         }
     },
-    "vtex.menu@2.x:submenu#electronics": {
+    "vtex.menu@2.x:submenu#electronics":{
         "children": [
             "vtex.menu@2.x:menu#electronics"
         ]
     },
-    "vtex.menu@2.x:menu#electronics": {
-        "children": [
+    "vtex.menu@2.x:menu#electronics":{
+        "children":[
             "menu-item#cameras",
             "menu-item#laptops",
             "menu-item#tvs"
