--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -9,49 +9,31 @@
         "orientation": "horizontal"
       }
     },
-    "vtex.menu@2.x:submenu#major":{
-        "children": [
-            "vtex.menu@2.x:menu#major-appliances"
-        ]
-    },
-    "vtex.menu@2.x:menu#major-appliances":{
-        "children":[
-            "menu-item#refrigerators",
-            "menu-item#ovens",
-            "menu-item#washers"
+    "menu-item#major-appliances":{
+        "blocks": [
+            "vtex.menu@2.x:submenu#major"
         ],
-        "props": {
-            "orientation": "vertical"
+        "props":{
+            "type": "custom",
+            "iconId": null,
+            "itemProps":{
+                "text": "Major Appianes",
+                "type": "internal",
+                "noFllow": true
+            }
         }
     },
-    "vtex.menu@2.x:submenu#small":{
+    "vtex.menu@2.x:submenu#major":{
         "children": [
-            "vtex.menu@2.x:menu#small-appliances"
+            "vtex.menu@2.x:menu#major"
         ]
     },
-    "vtex.menu@2.x:menu#small-appliances":{
+    "vtex.menu@2.x:menu#major":{
         "children":[
             "menu-item#mixers",
             "menu-item#toasters",
             "menu-item#coffee"
         ],
-        "props": {
-            "orientation": "vertical"
-        }
-    },
-    "vtex.menu@2.x:submenu#electronics":{
-        "children": [
-            "vtex.menu@2.x:menu#electronics"
-        ]
-    },
-    "vtex.menu@2.x:menu#electronics":{
-        "children":[
-            "menu-item#cameras",
-            "menu-item#laptops",
-            "menu-item#tvs"
-        ],
-        "props": {
-            "orientation": "vertical"
-        }
+        "props":{"orientation": "vertical"}
     }
 }
