--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -35,5 +35,60 @@
             "menu-item#washers"
         ],
         "props":{"orientation": "vertical"}
+    },
+    "menu-item#small-appliances":{
+        "blocks": [
+            "vtex.menu@2.x:submenu#small"
+        ],
+        "props":{
+            "type": "custom",
+            "iconId": null,
+            "itemProps":{
+                "text": "Small Appianes",
+                "type": "internal",
+                "noFllow": true
+            }
+        }
+    },
+    "vtex.menu@2.x:submenu#small":{
+        "children": [
+            "vtex.menu@2.x:menu#small"
+        ]
+    },
+    "vtex.menu@2.x:menu#small":{
+        "children":[
+            "menu-item#mixers",
+            "menu-item#toasters",
+            "menu-item#coffee"
+        ],
+        "props":{"orientation": "vertical"}
+    },
+    "menu-item#electronics":{
+        "blocks": [
+            "vtex.menu@2.x:submenu#electronics"
+        ],
+        "props":{
+            "type": "custom",
+            "iconId": null,
+            "itemProps":{
+                "text": "Electronics",
+                "type": "internal",
+                "noFllow": true
+            }
+        }
+    },
+    "vtex.menu@2.x:submenu#electronics":{
+        "children": [
+            "vtex.menu@2.x:menu#electronics"
+        ]
+    },
+    "vtex.menu@2.x:menu#electronics":{
+        "children":[
+            "menu-item#cameras",
+            "menu-item#laptops",
+            "menu-item#tvs"
+        ],
+        "props":{"orientation": "vertical"}
     }
+
 }
