--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -17,7 +17,7 @@
             "type": "custom",
             "iconId": null,
             "itemProps":{
-                "text": "Major Appianes",
+                "text": "Major Appliances",
                 "type": "internal",
                 "noFllow": true
             }
@@ -25,10 +25,10 @@
     },
     "vtex.menu@2.x:submenu#major":{
         "children": [
-            "vtex.menu@2.x:menu#major"
+            "vtex.menu@2.x:menu#major-appliances"
         ]
     },
-    "vtex.menu@2.x:menu#major":{
+    "vtex.menu@2.x:menu#major-appliances":{
         "children":[
             "menu-item#refrigerators",
             "menu-item#ovens",
@@ -52,10 +52,10 @@
     },
     "vtex.menu@2.x:submenu#small":{
         "children": [
-            "vtex.menu@2.x:menu#small"
+            "vtex.menu@2.x:menu#small-appliances"
         ]
     },
-    "vtex.menu@2.x:menu#small":{
+    "vtex.menu@2.x:menu#small-appliances":{
         "children":[
             "menu-item#mixers",
             "menu-item#toasters",
