--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -52,10 +52,10 @@
     },
     "vtex.menu@2.x:submenu#small":{
         "children": [
-            "vtex.menu@2.x:menu#small-appliances"
+            "vtex.menu@2.x:menu#small"
         ]
     },
-    "vtex.menu@2.x:menu#small-appliances":{
+    "vtex.menu@2.x:menu#small":{
         "children":[
             "menu-item#mixers",
             "menu-item#toasters",
