--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -47,7 +47,7 @@
                 "noFllow": true
             },
             "items":{
-                "id": "vtex.menu@2.x:submenu#major"
+                "id": "vtex.menu@2.x:submenu#small"
             }
         }
     },
