--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -63,28 +63,28 @@
         ]
     },
     "vtex.menu@2.x:menu#major":{
+        "props":{"orientation": "vertical"},
         "children":[
             "menu-item#refrigerators",
             "menu-item#ovens",
             "menu-item#washers"
-        ],
-        "props":{"orientation": "vertical"}
+        ]        
     },
     "vtex.menu@2.x:menu#small":{
+        "props":{"orientation": "vertical"},
         "children":[
             "menu-item#mixers",
             "menu-item#toasters",
             "menu-item#coffee"
-        ],
-        "props":{"orientation": "vertical"}
+        ]
     },
     "vtex.menu@2.x:menu#electronics":{
+        "props":{"orientation": "vertical"},
         "children":[
             "menu-item#cameras",
             "menu-item#laptops",
             "menu-item#tvs"
-        ],
-        "props":{"orientation": "vertical"}
+        ]        
     }
 
 }
