--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -10,16 +10,17 @@
       }
     },
     "menu-item#major-appliances":{
+        "blocks": ["vtex.menu@2.x:submenu#major"],
         "props":{
             "itemProps":{
                 "text": "Major Appliances",
                 "type": "internal",
                 "href": "#"
             }
-        },
-        "blocks": ["vtex.menu@2.x:submenu#major"]
+        }
     },
     "menu-item#small-appliances":{
+        "blocks": ["vtex.menu@2.x:submenu#small"],
         "props":{
             "type": "custom",
             "iconId": null,
@@ -28,12 +29,10 @@
                 "type": "internal",
                 "noFllow": true
             }
-        },
-        "blocks": [
-            "vtex.menu@2.x:submenu#small"
-        ]
+        }
     },
     "menu-item#electronics":{
+        "blocks": ["vtex.menu@2.x:submenu#electronics"],
         "props":{
             "type": "custom",
             "iconId": null,
@@ -42,10 +41,7 @@
                 "type": "internal",
                 "noFllow": true
             }
-        },
-        "blocks": [
-            "vtex.menu@2.x:submenu#electronics"
-        ]
+        }
     },
     "vtex.menu@2.x:submenu#small":{
         "children": [
