--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -1,4 +1,9 @@
 {
+    "vtex.menu@2.x:submenu#major": {
+        "children": [
+            "flex-layout.row#major"
+        ]
+    },
     "vtex.menu@2.x:menu#major": {
         "props": {
             "orientation": "vertical"
